--- a/Blog_app/static/css/base.css
+++ b/Blog_app/static/css/base.css
@@ -2,6 +2,7 @@
 body{
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 18px;
+    padding: 50px 30px;
 }
 header{
     border-bottom: 1px solid #999;
@@ -22,6 +23,8 @@ header h1 a{
 }
 .post-entry{
     margin-bottom: 2rem;
+    width: 80%;
+    margin: 0 auto;
 }
 .post-entry h2{
     margin: 0.5rem 0;
