--- a/Blog_app/templates/base.html
+++ b/Blog_app/templates/base.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <header>
-        <h1><a href="{% url 'home'  %}">My Blog</a> </h1>
+        <div class="nav-left">
+           <h1><a href="{% url 'home'  %}">My Blog</a> </h1>
+        </div>
+        <div class="nav-left">
+           <a href="{% url 'post_new'  %}">+ New Blog Post</a>
+        </div>
+
+
     </header>
     <div>
         {% block content %}
